--- a/ProjectWithMVC/pom.xml
+++ b/ProjectWithMVC/pom.xml
@@ -17,6 +17,9 @@
         <jstl.version>1.2</jstl.version>
         <servlet.version>3.1.0</servlet.version>
         <jsp.version>2.1</jsp.version>
+        <jdbc.version>8.0.18</jdbc.version>
+        <hibernate.version>5.4.4.Final</hibernate.version>
+        <spring.orm>5.1.6.RELEASE</spring.orm>
     </properties>
     <dependencies>
         <dependency>
@@ -38,6 +41,23 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.4.Final</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>5.1.6.RELEASE</version>
         </dependency>
     </dependencies>
 
