--- a/WorkWithSpringMVC/pom.xml
+++ b/WorkWithSpringMVC/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.version}</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
     </dependencies>
 
     <build>
